--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,21 @@
 {
+  "manifest_version": 2,
   "name": "Kongre-Focus",
   "browser_action": {
     "default_icon": "entancient.png",
     "default_title": "Kongre-Focus"
+      
   },
 
   "icons": { "16": "ent-16.png",
              "48": "ent-48.png",
             "128": "ent-128.png" },
 
-  "version": "1.0",
+  "version": "1.1",
   "description": "Chop out unnecessary elements from Kongregate's game pages",
 
   "permissions": [
     "tabs", "http://*/*"
   ],
-  "background_page": "background.html"
+  "background": { "scripts": ["background.js"]}
 }
